# AdaptiveCache1

./: CMakeLists.txt  Makefile  README.md  cache_project  database_handler.cpp  database_handler.h  main.cpp  splay_tree.cpp  splay_tree.h
assets/: Cache.sql  Cache.sql:Zone.Identifier  data.db  setup.sql
include/: database_handler.h  main_window.h  splay_tree.h
source/: database_handler.cpp  main.cpp  main_window.cpp  main_window.ui  splay_tree.cpp
